[tool.poetry]
name = "integral-site-config"
version = "0.1.0"
description = ""
authors = ["Volodymyr Savchenko <contact@volodymyrsavchenko.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
click = "^8.0.3"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
click = "^8.0.3"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
